--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,8 +6,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>ERROR!</h1>
-    <a href="/">Go back to Home</a>
-  </body>
+  <body></body>
 </html>
